.arxived/c/cmd/yacc/testdata/expr/y.output

state 0
	$accept: .top $end 

	'+'  shift 4
	'-'  shift 5
	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr  goto 2
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  expr.    (1)

	.  reduce 1 (src line 43)


state 3
	expr:  expr1.    (2)
	expr1:  expr1.'+' expr2 
	expr1:  expr1.'-' expr2 

	'+'  shift 11
	'-'  shift 12
	.  reduce 2 (src line 53)


state 4
	expr:  '+'.expr 

	'+'  shift 4
	'-'  shift 5
	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr  goto 13
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7

state 5
	expr:  '-'.expr 

	'+'  shift 4
	'-'  shift 5
	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr  goto 14
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7

state 6
	expr1:  expr2.    (5)
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'*'  shift 15
	'/'  shift 16
	.  reduce 5 (src line 64)


state 7
	expr2:  expr3.    (8)

	.  reduce 8 (src line 75)


state 8
	expr3:  NUM.    (11)

	.  reduce 11 (src line 86)


state 9
	expr3:  ID.    (12)

	.  reduce 12 (src line 88)


state 10
	expr3:  '('.expr ')' 

	'+'  shift 4
	'-'  shift 5
	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr  goto 17
	expr1  goto 3
	expr2  goto 6
	expr3  goto 7

state 11
	expr1:  expr1 '+'.expr2 

	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr2  goto 18
	expr3  goto 7

state 12
	expr1:  expr1 '-'.expr2 

	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr2  goto 19
	expr3  goto 7

state 13
	expr:  '+' expr.    (3)

	.  reduce 3 (src line 55)


state 14
	expr:  '-' expr.    (4)

	.  reduce 4 (src line 59)


state 15
	expr2:  expr2 '*'.expr3 

	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr3  goto 20

state 16
	expr2:  expr2 '/'.expr3 

	'('  shift 10
	NUM  shift 8
	ID  shift 9
	.  error

	expr3  goto 21

state 17
	expr3:  '(' expr.')' 

	')'  shift 22
	.  error


state 18
	expr1:  expr1 '+' expr2.    (6)
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'*'  shift 15
	'/'  shift 16
	.  reduce 6 (src line 66)


state 19
	expr1:  expr1 '-' expr2.    (7)
	expr2:  expr2.'*' expr3 
	expr2:  expr2.'/' expr3 

	'*'  shift 15
	'/'  shift 16
	.  reduce 7 (src line 70)


state 20
	expr2:  expr2 '*' expr3.    (9)

	.  reduce 9 (src line 77)


state 21
	expr2:  expr2 '/' expr3.    (10)

	.  reduce 10 (src line 81)


state 22
	expr3:  '(' expr ')'.    (13)

	.  reduce 13 (src line 92)


11 terminals, 6 nonterminals
14 grammar rules, 23/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
55 working sets used
memory: parser 22/120000
20 extra closures
41 shift entries, 1 exceptions
12 goto entries
11 entries saved by goto default
Optimizer space used: output 27/120000
27 table entries, 2 zero
maximum spread: 11, maximum offset: 16
